refactor: abandon manual autoconfiguration and use Java 25