@@ -9,14 +9,15 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.2</version>
+		<version>3.5.6</version>
 	</parent>
 
 	<properties>
 		<start-class>com.github.fwi.sbtreeconf.AppMain</start-class>
-		<java.version>21</java.version>
-		<modelmapper.version>3.2.2</modelmapper.version>
-		<asciidoctor.plugin.version>3.1.1</asciidoctor.plugin.version>
+		<java.version>25</java.version>
+		<modelmapper.version>3.2.4</modelmapper.version>
+		<asciidoctor.plugin.version>3.2.0</asciidoctor.plugin.version>
+		<lombok.version>1.18.42</lombok.version>
 		<skipDocs>false</skipDocs>
 	</properties>
 
@@ -104,13 +105,6 @@
 			<scope>provided</scope>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<!-- Prevent warnings about "unknown enum constant javax.annotation.meta.When.MAYBE" -->
-			<groupId>com.github.spotbugs</groupId>
-			<artifactId>spotbugs-annotations</artifactId>
-			<scope>provided</scope>
-			<optional>true</optional>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -129,14 +123,8 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<annotationProcessorPaths>
-						<!-- Prevent warning from compiler about annotation processing. -->
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-							<version>${lombok.version}</version>
-						</path>
-					</annotationProcessorPaths>
+					<!-- Prevent warning from compiler about annotation processing. -->
+					<proc>full</proc>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -144,8 +132,8 @@
 				<configuration>
 					<!-- Suppress warnings from the JVM. -->
 					<!-- When using jacoco, prefix with "@{argLine} " -->
-					<!-- "javaagent bytebuddy" can also be replaced with "-XX:+EnableDynamicAgentLoading" -->
-					<argLine>-Xshare:off -javaagent:${net.bytebuddy:byte-buddy-agent:jar}</argLine>
+					<!-- "javaagent" can also be replaced with "-XX:+EnableDynamicAgentLoading" -->
+					<argLine>-Xshare:off --sun-misc-unsafe-memory-access=allow -javaagent:${org.mockito:mockito-core:jar}</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -159,10 +147,6 @@
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-						</exclude>
-						<exclude>
-							<groupId>com.github.spotbugs</groupId>
-							<artifactId>spotbugs-annotations</artifactId>
 						</exclude>
 					</excludes>
 				</configuration>
@@ -184,26 +168,6 @@
 					<failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
 					<offline>true</offline>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<configuration>
-					<skip>${skipDocs}</skip>
-					<skipTests>${skipDocs}</skipTests>
-					<includes>
-						<include>*ApiDocs.java</include>
-					</includes>
-					<argLine>-Xshare:off -javaagent:${net.bytebuddy:byte-buddy-agent:jar}</argLine>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>test</phase>
-						<goals>
-							<goal>integration-test</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.asciidoctor</groupId>
@@ -241,6 +205,11 @@
 					<artifactId>h2</artifactId>
 					<scope>runtime</scope>
 				</dependency>
+				<dependency>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-devtools</artifactId>
+					<scope>runtime</scope>
+				</dependency>
 			</dependencies>
 			<build>
 				<plugins>
@@ -249,46 +218,13 @@
 						<artifactId>spring-boot-maven-plugin</artifactId>
 						<configuration>
 							<profiles>
+								<profile>test</profile>
 								<profile>run</profile>
 							</profiles>
 							<additionalClasspathElements>
 								<additionalClasspathElement>src/test/resources</additionalClasspathElement>
 							</additionalClasspathElements>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<configuration>
-							<skip>true</skip>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>io.github.git-commit-id</groupId>
-						<artifactId>git-commit-id-maven-plugin</artifactId>
-						<configuration>
-							<skip>true</skip>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>apidocs</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<skip>true</skip>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-maven-plugin</artifactId>
-						<configuration>
-							<skip>true</skip>
+							<jvmArguments>--sun-misc-unsafe-memory-access=allow</jvmArguments>
 						</configuration>
 					</plugin>
 					<plugin>
